legal spacing fixed

--- a/public/styles/legal.css
+++ b/public/styles/legal.css
@@ -50,9 +50,11 @@ body{
   font-size: 18px;
 }
 
-.container{
+.legalContainer{
+  margin-left: auto;
+  margin-right: auto;
   padding-bottom: 50px;
-  padding-top: 50px;
+  padding-top: 100px;
   width: 85%;
   max-width: 1100px;
 }
